Adding first test