@@ -6,7 +6,8 @@ plugins {
 
 group = 'com.docutools'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+sourceCompatibility = 14
+targetCompatibility = 14
 
 configurations {
     compileOnly {
@@ -31,6 +32,14 @@ dependencies {
     implementation("org.apache.poi:poi-ooxml-schemas:4.1.2")
 }
 
+// Enable support for records, patterns and text blocks
+compileJava {
+    options.compilerArgs += ["--enable-preview"]
+}
+compileTestJava {
+    options.compilerArgs += ["--enable-preview"]
+}
 test {
+    jvmArgs '--enable-preview'
     useJUnitPlatform()
 }
